@@ -1,0 +1,14 @@
+---
+version: 2.0.0
+checks:
+  oval:com.puppet.forge.simp.rsync.server.global.address:
+    settings:
+      parameter: rsync::server::global::address
+      value: 127.0.0.1
+    type: puppet-class-parameter
+    controls:
+      nist_800_53:rev4: true
+      nist_800_53:rev4:CM-7: true
+    identifiers:
+      nist_800_53:rev4:
+      - CM-7
